--- a/laila1.html
+++ b/laila1.html
@@ -2,23 +2,31 @@
 <html>
 <head>
     <title>mr donuts </title>
-<link rel="stylesheet" href="style.css">
 </head>
     <body>
-<h1>mr donuts is the place to make donuts</h1>
-<p>we make donuts in a diffrent shap and flavors </p>
-<p>the flavors is</p>
+        <section><h1>mr donuts is the place to make donuts</h1>
+        </section>
+        <article>
+            <p>we make donuts in a diffrent shap and flavors </p>
+            <p>the flavors is</p>
+        </article>
 <nav>
     <ol>
 <li>chocolate</li>
 <li>casterd</li>
 <li>strawberris</li>
     </ol>
+    <header>
+        <img src="https://cdn.shopify.com/s/files/1/2486/2582/products/112-090-Magic-Bakery-Unicorn-Donuts-Scented-Erasers-O2_800x800.png?v=1574543305" alt="donuts">
+    </header>
 <p>if you want to order contact with us</p>
-<ul>
-    <li></li><a href="http://">https://web.facebook.com/index.php?_rdc=1&_rdr</a>
-    <li></li><a href="http://">https://www.instagram.com/?hl=en</a>
-    <li></li><a href="http://">https://mobile.twitter.com/login</a>
-</ul>   
+<footer>
+    <ul>
+        <li></li><a href="http://">https://web.facebook.com/index.php?_rdc=1&_rdr</a>
+        <li></li><a href="http://">https://www.instagram.com/?hl=en</a>
+        <li></li><a href="http://">https://mobile.twitter.com/login</a>
+    </ul>   
+</footer>
+
     </body>
 </html>
