--- a/laila1.html
+++ b/laila1.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>mr donuts </title>
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        <section><h1>mr donuts is the place to make donuts</h1>
+        <section>
+            <h1>mr donuts is the place to make donuts</h1>
         </section>
         <article>
             <p>we make donuts in a diffrent shap and flavors </p>
@@ -16,17 +18,26 @@
 <li>casterd</li>
 <li>strawberris</li>
     </ol>
+    </nav>
     <header>
         <img src="https://cdn.shopify.com/s/files/1/2486/2582/products/112-090-Magic-Bakery-Unicorn-Donuts-Scented-Erasers-O2_800x800.png?v=1574543305" alt="donuts">
     </header>
-<p>if you want to order contact with us</p>
-<footer>
-    <ul>
-        <li></li><a href="http://">https://web.facebook.com/index.php?_rdc=1&_rdr</a>
-        <li></li><a href="http://">https://www.instagram.com/?hl=en</a>
-        <li></li><a href="http://">https://mobile.twitter.com/login</a>
-    </ul>   
-</footer>
+<h2 class=".p-colo"></h2>if you want to order contact with us</p>
+
+<ul>
+    <li>facebook</li>
+    <li>instgram</li>
+    <li>twiter</li>
+</ul>
+
+
+
+
+
+
+
+
+
 
     </body>
 </html>
