--- a/laila1.html
+++ b/laila1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>mr donuts </title>
+    <title>mr donuts</title>
     <link rel="stylesheet" href="style.css">
 </head>
  <body>
@@ -31,5 +31,6 @@
     <li>instgram</li>
     <li>twiter</li>
 </ul>
+<script src="java.js"></script>
     </body>
 </html>
