--- a/laila1.html
+++ b/laila1.html
@@ -8,7 +8,8 @@
   <section>
     <h1>Welcome to the official mr donuts web page
          Share your Donuts moment, discover our exclusive offers and delight your loved ones with our new creations. </h1>
-</head>
+
+        </head>
     <body>
         <article>
             <p>we make donuts in a diffrent shap and flavors </p>
@@ -31,6 +32,7 @@
     <li>instgram</li>
     <li>twiter</li>
 </ul>
+<img src="https://ih1.redbubble.net/image.963559989.1624/fposter,small,wall_texture,product,750x1000.jpg" alt="">
 <script src="java.js"></script>
 <script src="math.js"></script>
     </body>
